--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Untitled</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
+    <head>
+        <meta charset="UTF-8">
+        <title>Untitled</title>
+        <script src="libraries/p5.js" type="text/javascript"></script>
 
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
+        <script src="libraries/p5.dom.js" type="text/javascript"></script>
+        <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
-    <script src="sketch.js" type="text/javascript"></script>
+        <script src="sketch.js" type="text/javascript"></script>
         <script src="polygon.js" type="text/javascript"></script>
+        <script src="big_hex.js" type="text/javascript"></script>
+        <script src="hex_branch.js" type="text/javascript"></script>
+        <script src="star_flake.js" type="text/javascript"></script>
+        <script src="simple_poly.js" type="text/javascript"></script>
 
-    <script src="palette.js" type="text/javascript"></script>
+        <script src="palette.js" type="text/javascript"></script>
 
 
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
-  </head>
-  <body>
-  </body>
+        <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+    </head>
+    <body>
+    </body>
 </html>
