--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
+    <script src="palette.js" type="text/javascript"></script>
     <script src="sketch.js" type="text/javascript"></script>
         <script src="polygon.js" type="text/javascript"></script>
 
-    <script src="palette.js" type="text/javascript"></script>
 
 
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
+    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;}
+    button { color: #647678;
+        background-color: transparent;
+        border: 1px solid #647678;
+        /*transition: all 0.25s ease-out; */
+        width: auto;
+        height: auto;
+        display: inline-block;
+        border: 1;
+        font-size: 14px;
+    }
+    </style>
   </head>
   <body>
   </body>
