--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
     <script src="palette.js" type="text/javascript"></script>
-    <script src="sketch_open.js" type="text/javascript"></script>
+    <script src="sketch.js" type="text/javascript"></script>
     <script src="polygon.js" type="text/javascript"></script>
 
 
